--- a/gb/23/12/26/n14144171.md
+++ b/gb/23/12/26/n14144171.md
@@ -1,19 +1,19 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>“加拿大鹅”援助甘肃高端羽绒服 被曝遭倒卖</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/12/id13413455-04b98e03786a1e096acf6a3bc2d71457-600x400.jpeg" />
 <h6>2018年1月19日，一位女士在美国犹他州帕克城举行的电影节上穿着“加拿大鹅”的品牌服装。(Rich Fury: Getty Images for Canada Goose)
 </h6>
 <hr>
-	<p>【大纪元2023年12月27日讯】（大纪元记者李净综合报导）中共控制的慈善机构腐败丑闻不断曝出。在甘肃省积石山县发生6.2级地震后，加拿大高端冬季服装品牌“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8A%A0%E6%8B%BF%E5%A4%A7%E9%B9%85.md#1">加拿大鹅</a>”（Canada Goose）向震区援助逾两千件<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%BE%BD%E7%BB%92%E6%9C%8D.md#1">羽绒服</a>，随后爆出部分羽绒服被人倒卖。</p>
+	<p>【大纪元2023年12月27日讯】（大纪元记者李净综合报导）中共控制的慈善机构腐败丑闻不断曝出。在甘肃省积石山县发生6.2级地震后，加拿大高端冬季服装品牌“加拿大鹅”（Canada Goose）向震区援助逾两千件羽绒服，随后爆出部分羽绒服被人倒卖。</p>
 <p>12月18日23时许，甘肃省临夏州积石山县发生6.2级地震。截至12月20日8时，共记录到余震423次。12月27日00时许，积石山县再次发生3.3级地震，震源深度10千米。</p>
 <p>目前正值隆冬，当地气温低至零下15摄氏度。地震发生后，大批灾民街头露宿，严重缺少物资。</p>
-<p><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8A%A0%E6%8B%BF%E5%A4%A7%E9%B9%85.md#1">加拿大鹅</a>官方微博早在21日曾发布消息称，其联合上海慈善基金会捐赠逾2000件<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%BE%BD%E7%BB%92%E6%9C%8D.md#1">羽绒服</a>及防寒物资，并表示“尽绵薄之力，援助甘肃震区，共渡难关。”</p>
-<figure id="attachment_14144174" aria-describedby="caption-attachment-14144174" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/12/id14144174-nimg.ws_.126-e1703623556470.jpg"><img class="size-full wp-image-14144174" src="https://i.epochtimes.com/assets/uploads/2023/12/id14144174-nimg.ws_.126-e1703623556470.jpg" alt="" width="450" b="241" /></a><figcaption id="caption-attachment-14144174" class="wp-caption-text">（网页截图）</figcaption></figure>
+<p>加拿大鹅官方微博早在21日曾发布消息称，其联合上海慈善基金会捐赠逾2000件羽绒服及防寒物资，并表示“尽绵薄之力，援助甘肃震区，共渡难关。”</p>
+<figure id="attachment_14144174" aria-describedby="caption-attachment-14144174" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/12/id14144174-nimg.ws_.126-e1703623556470.jpg"><img decoding="async" class="size-full wp-image-14144174" src="https://i.epochtimes.com/assets/uploads/2023/12/id14144174-nimg.ws_.126-e1703623556470.jpg" alt="" width="450" b="241" /></a><figcaption id="caption-attachment-14144174" class="wp-caption-text">（网页截图）</figcaption></figure>
 <p>然而，几天后，有网友在社交平台晒图表示，有卖家在二手交易平台对外出售疑似援助甘肃震区的加拿大鹅羽绒服。</p>
 <p>12月26日，阿里巴巴旗下闲置交易平台“闲鱼”一名用户发帖称：“援助甘肃震区鹅，看视频就知道货不一般，只有几百件，先到先得，无水洗标无吊牌，不退换。”并配有视频。</p>
-<figure id="attachment_14144173" aria-describedby="caption-attachment-14144173" style="width: 426px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/12/id14144173-621.jpg"><img class="size-full wp-image-14144173" src="https://i.epochtimes.com/assets/uploads/2023/12/id14144173-621.jpg" alt="" width="426" b="898" /></a><figcaption id="caption-attachment-14144173" class="wp-caption-text">（网页截图）</figcaption></figure>
+<figure id="attachment_14144173" aria-describedby="caption-attachment-14144173" style="width: 426px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/12/id14144173-621.jpg"><img decoding="async" class="size-full wp-image-14144173" src="https://i.epochtimes.com/assets/uploads/2023/12/id14144173-621.jpg" alt="" width="426" b="898" /></a><figcaption id="caption-attachment-14144173" class="wp-caption-text">（网页截图）</figcaption></figure>
 <p>对此，临夏州民政局、上海市慈善基金会回应称上述信息不实，临夏州宣传部郭部长称，目前这批物资还没有发下去。</p>
 <p>尽管官方针对相关舆情火速“灭火”，但不少网民表示质疑，“官方说捐赠给地震灾区的加拿大鹅羽绒服将一定发放到灾民手上，好吧，过一段时间，我们都可以去灾民家里现场探访，乃至一件一件地数，看能数出多少件来。”</p>
 <p>“最终要看这两千件加拿大鹅究竟会穿在谁身上了，很怀疑这批羽绒服能够真正发到灾民手里。”</p>
@@ -21,48 +21,44 @@
 <p>还有网友讽刺说：“穿着几百块钱棉大衣的乡长、村书记一想到上万元的羽绒服将一件不落地穿到灾民身上，无不喜极而涕，并与灾民摆拍留念。”</p>
 <p>据中共公安部此前发布消息，甘肃、青海两地公安机关紧急调集5000余名警力赴灾区“维稳”，并提升灾区社会面防控等级，包括打击所谓的散布涉地震谣言信息等。</p>
 <h2>甘肃红十字会曝出赈灾丑闻</h2>
-<p>积石山地震发生后，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%94%98%E8%82%83%E7%9C%81%E7%BA%A2%E5%8D%81%E5%AD%97%E4%BC%9A.md#1">甘肃省红十字会</a>在这次赈灾中已曝出丑闻。</p>
-<p>根据爆料人提供的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%94%98%E8%82%83%E7%9C%81%E7%BA%A2%E5%8D%81%E5%AD%97%E4%BC%9A.md#1">甘肃省红十字会</a><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%B5%88%E7%81%BE%E7%89%A9%E8%B5%84.md#1">赈灾物资</a>采购费用清单，官方采购的一个暖手炉价格为500元，而网上均价基本在几十或一百多元之间；官方采购一个12平米棉帐篷需要2,200元，而大陆某电商平台销售的一顶“防风、防雨、三层加棉”帐篷价格为529元；另外，官方5斤大米（或面粉）加900毫升食用油的粮油包价格为80元，棉衣棉被均价为100元。同时，采购的物资还被收取管理费162万元。</p>
+<p>积石山地震发生后，甘肃省红十字会在这次赈灾中已曝出丑闻。</p>
+<p>根据爆料人提供的甘肃省红十字会赈灾物资采购费用清单，官方采购的一个暖手炉价格为500元，而网上均价基本在几十或一百多元之间；官方采购一个12平米棉帐篷需要2,200元，而大陆某电商平台销售的一顶“防风、防雨、三层加棉”帐篷价格为529元；另外，官方5斤大米（或面粉）加900毫升食用油的粮油包价格为80元，棉衣棉被均价为100元。同时，采购的物资还被收取管理费162万元。</p>
 <p>据爆料人披露，几乎采购的每件物资都远远高于市场价，而且几乎每件商品的价格都是整数。大宗商品采购应该低于市场价，讨价还价后如果每件商品优惠一元就能够节省几万元。</p>
 <p>该爆料人表示，除1,626万元采购费，还收缴了162万元管理费。</p>
 <p>在此之前，甘肃省红十字会已曝出丑闻。在2013年7月甘肃省定西市发生6.6级地震后，甘肃红十字会也曾爆出“天价矿泉水”事件。</p>
-<p>中共垄断的红十字会丑闻不断，自2011年后，陆续曝出的卢湾区红十字会高额餐饮费事件、<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%83%AD%E7%BE%8E%E7%BE%8E.md#1">郭美美</a>炫富事件、名人假捐摆拍事件、“大肚女孩”捐款延迟事件、总会领导每人配两辆豪车等。随着公信力的大幅丧失，其接收的社会捐款数额剧减。</p>
+<p>中共垄断的红十字会丑闻不断，自2011年后，陆续曝出的卢湾区红十字会高额餐饮费事件、郭美美炫富事件、名人假捐摆拍事件、“大肚女孩”捐款延迟事件、总会领导每人配两辆豪车等。随着公信力的大幅丧失，其接收的社会捐款数额剧减。</p>
 <p>责任编辑：李穹#</p>
 	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/23/n14122274.md#1">世卫要求北京说明儿童肺炎激增详情</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/23/n14122504.md#1">多种病毒流行 世卫要求说明 中国怎么了？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/11/n14134360.md#1">报告：中共加强对维权人士家属的株连迫害</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/5/n14130100.md#1">中国个人债务危机潮到来 “老赖”人数激增</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：乐高乐园的中国元素 文化的旅程</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141316.md#1">这些亚马逊好物 让你生活品质大提升</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">UGG 男士雨衣61%折扣</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135076.md#1">羊毛衫不缩水不掉色 这种洗衣液是关键</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/13/n11791346.md#1">中共高调“奔小康” 43斤女大学生因贫去世</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12707987.md#1">中共刚宣布脱贫 四川墨茶因贫致死引全网关注</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/9/7/n13217879.md#1">中国慈善机构曝丑闻 一公益项目涉嫌违规套捐</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/12/2/n13413377.md#1">“加拿大鹅”拒退货遭约谈 中共批判调门升级</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/5/29/n10435561.md#1" target="_blank">罗思义：一个到死还相信共产党伟大的“学者”</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/9/20/n10729835.md#1" target="_blank">权威学者：侵犯宗教自由 中共被点名最多</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2022/05/01/a103414939.md#1" target="_blank">加拿大20市镇升旗亮灯 祝贺法轮大法传世30年</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/4/16/n10307862.md#1" target="_blank">中共淫乱的前生今世（11）前车之鉴</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/6/30/n11355603.md#1" target="_blank">法轮功阿根廷洪传19年 法官曾要抓江罗</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/8/n14132234.md#1">人身有多难得？聊斋中的轮回故事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/20/n14119976.md#1">雨霖铃?李克强之死</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/18/n14138664.md#1">冬至知多少？冬至文化典故与民俗集锦</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/17/n14137969.md#1">美国防承包商称 蛋形UFO曾保存在51区</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/30/n14127129.md#1">奉天命助圣王治世 百日为相白马化龙（下）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/22/n14141715.md#1">【全球新闻】前央视喉舌王志安被起底 中共大外宣被看穿</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/22/n14141713.md#1">【晚间新闻】盘点2024年美中关系对抗焦点</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14140545.md#1">【百年真相】一把火烧80吨 中共三次焚书运动</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14140113.md#1">中共国安插足经济引内讧 与胡锡进互怼</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14140579.md#1">中共告诉拜登将统一台湾 白宫回应</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14140541.md#1">国务院智囊公开承认：历史留给中共时间已不多</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/19/n14139785.md#1">杨幂着15公斤礼服 累到在电梯里两度面壁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14139880.md#1">两次被主持人说错一电影名 梁朝伟一脸尴尬</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14140599.md#1">为妻治病花光积蓄且欠债 港导演彭发申请破产</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141362.md#1">黎姿曾因弟出车祸退圈 如今黎婴站立拍全家福</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141408.md#1">央视书画节目总导演楼建军猝死 终年56岁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：法国传奇 爱马仕香水年终5折酬宾</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">旅行必备：旅行电源板3个USB 2个插座  41%折扣</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/6/n14130699.md#1">蜂蜜止咳胜抗生素 五代中医传人: 这样吃很有效</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14140144.md#1">睡前想什么会影响睡眠？ 专家这么说</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/19/n14139698.md#1">预防第2大夺命癌症 早做一件事生存率超9成</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/30/n14301175.md#1">一两黄金一块砖 紫禁城“金砖”怎地这么高贵？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300489.md#1">“别人”做的饭菜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306679.md#1">【菁英论坛】股市大震荡 如何冲击全球经济</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306133.md#1">【新闻欣视角】中国富豪“润”更多 中共又失老朋友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306705.md#1">【马克时空】乌克兰F-16终成军 配什么武器</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305316.md#1">分析：金价创历史新高 或反过来抑制需求</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305216.md#1">唐山打人事件再引关注 警察异地实名举报</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305084.md#1">【更新】2024年巴黎奥运奖牌榜 8月5日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14304932.md#1">《龙卷风暴》全球票房不敷成本 8月线上发行</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14304841.md#1">TWICE周子瑜首张个人专辑 9月6日发行</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305321.md#1">陈思诚新片《解密》票房遇冷 估计至少亏3亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306143.md#1">《死侍与金钢狼》票房惊人 席琳·狄翁逗趣恭喜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305052.md#1">《星际异攻队》10年前被看衰 “星爵”从傻蛋翻身</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305693.md#1">飞机快起飞了还在排安检怎么办？旅游达人提2方法</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304554.md#1">蔬菜煎蛋加什么“菜”最对味？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305178.md#1">嫩化牛排简单用一物 你的橱柜里就有</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14304786.md#1">蛋黄越橘越营养？营养师揭鸡蛋6大迷思</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/26/n14298933.md#1">常常咳嗽吗？2食疗帮你摆脱反复久咳</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/12/26/n14144171.htm">“加拿大鹅”援助甘肃高端羽绒服 被曝遭倒卖</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/12/26/n14144171.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/12/26/n14144171.htm">“加拿大鹅”援助甘肃高端羽绒服 被曝遭倒卖</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/12/26/n14144171.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
